# PhysicsSim

./: Cargo.toml  README.md
src/: config.rs  graphs.rs  main.rs  performance.rs
src/engine/: mod.rs  vector.rs
src/renderer/: line.wgsl  mod.rs  particle.wgsl
